--- a/style.css
+++ b/style.css
@@ -96,8 +96,8 @@ body {
   z-index: 5;
 }
 #about {
- 
-
+  padding: 70px 0;
+  line-height: 25px;
   color: white;
   background-color: #f19800;
 }
@@ -173,7 +173,8 @@ body {
   z-index: 5;
 }
 #about {
- 
+  padding: 70px 0;
+  line-height: 25px;
   color: white;
   background-color: #f19800;
 }
