--- a/style.css
+++ b/style.css
@@ -91,8 +91,10 @@ body {
   position: absolute;
   bottom: 0;
   width: 100%;
+  height: 100px;
   background: linear-gradient(to top, #f19800, transparent);
   z-index: 5;
+  margin-bottom: -50px;
 }
 #about {
   padding: 70px 0;
@@ -163,10 +165,12 @@ body {
   box-shadow: 5px 0px 15px rgba(85, 85, 85, 0.8);
 }
 #landing::before {
-    content: "";
+  content: "";
   position: absolute;
   bottom: 0;
+  margin-bottom: -50px;
   width: 100%;
+  height: 100px;
   background: linear-gradient(to top, #f19800, transparent);
   z-index: 5;
 }
