--- a/style.css
+++ b/style.css
@@ -92,7 +92,7 @@ body {
   bottom: 0;
   width: 100%;
   height: 100px;
-  background: linear-gradient(to top, #f19800, transparent);
+  background: linear-gradient(to top, #f19800 80%, transparent);
   z-index: 5;
   margin-bottom: -50px;
 }
@@ -171,7 +171,7 @@ body {
   margin-bottom: -50px;
   width: 100%;
   height: 100px;
-  background: linear-gradient(to top, #f19800, transparent);
+  background: linear-gradient(to top, #f19800 50%, transparent );
   z-index: 5;
 }
 #about {
@@ -184,7 +184,7 @@ body {
   z-index: 5;
   position: relative;
   text-align: center;
-  width: 80%;
+  width: 50%;
   margin: 0 auto;
 }
 .content hr {
