--- a/style.css
+++ b/style.css
@@ -197,4 +197,84 @@ body {
     text-align:justify;
     text-indent: 100px;
 }
+
+}
+@media only screen and (max-width:100px ) {
+ .hero {
+  height: 100vh;
+  width: 100%;
+  position: relative;
+  overflow: hidden;
+}
+#landing {
+  height: 100vh;
+}
+#landing h1 {
+  position: absolute;
+  z-index: 3;
+  top: 50%;
+  right: 0;
+  left: 0;
+  font-size: 100px;
+  color: white;
+  text-align: center;
+}
+.mid-img {
+  z-index: 2;
+}
+.focus-img {
+  z-index: 4;
+}
+.leaf-img {
+  z-index: 5;
+}
+.btn {
+  position: absolute;
+  top: 80%;
+  z-index: 9;
+  margin: 0 auto;
+  left: 50%;
+  -ms-transform: translate(-50%, 50%);
+  transform: translate(-50%, 50%);
+  text-decoration: none;
+  padding: 7px 15px;
+  color: white;
+  font-size: 20px;
+  border-radius: 4px;
+  background-color: #f19800;
+  box-shadow: 5px 0px 15px rgba(85, 85, 85, 0.8);
+}
+#landing::before {
+  content: "";
+  position: absolute;
+  bottom: 0;
+  margin-bottom: -70px;
+  width: 100%;
+  height: 100px;
+  background: linear-gradient(to top, #f19800 80%, transparent );
+  z-index: 5;
+}
+#about {
+  
+  line-height: 25px;
+  color: white;
+  background-color: #f19800;
+}
+.content {
+  z-index: 5;
+  position: relative;
+  text-align: center;
+  width: 50%;
+  margin: 0 auto;
+}
+.content hr {
+  width: 30%;
+  border: 1px solid white;
+  text-align: center;
+  display: inline-block;
+}
+.content p {
+    text-align:justify;
+    text-indent: 100px;
+}
 }
